src/test/deca/context/valid/created/objet/decl_meth.deca
//Description
//      utilisation des attributs d'une classe sans le this
//Resultat
//      Ok
class A {
    int x ;
    int getX(int a) {
        int y;
        return x;
    }
}