src/test/deca/context/invalid/created/objet/param.deca
// description :
//      double definition des champs d'une fonction
// Resultat
//      Ligne 9 : champ deja declaré

class A {
    int x ;
    int getX(int a) {
        int a;
        return x ;
    }
}